--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "type-fest": "^3.11.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
+    "safe-buffer": "^5.2.1"
   }
 }
