--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "gw3-sdk",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/gw3-sdk.umd.cjs",
   "module": "./dist/gw3-sdk.js",
   "exports": {
     ".": {
-      "import": "./dist/gw3-sdk.js",
-      "require": "./dist/gw3-sdk.umd.cjs"
+      "browser": {
+        "require": "./dist/gw3-sdk.umd.cjs",
+        "default": "./dist/gw3-sdk.js"
+      },
+      "default": {
+        "require": "./dist/gw3-sdk.cjs",
+        "default": "./dist/gw3-sdk.js"
+      }
     }
   },
   "scripts": {
@@ -17,7 +25,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "@types/crypto-js": "^4.1.1",
+    "rollup-plugin-auto-external": "^2.0.0",
     "type-fest": "^3.11.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
