feat: add dagImport

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gw3-sdk",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "type": "module",
   "files": [
     "dist"
@@ -13,26 +13,30 @@
         "require": "./dist/gw3-sdk.umd.cjs",
         "default": "./dist/gw3-sdk.js"
       },
-      "default": {
-        "require": "./dist/gw3-sdk.cjs",
-        "default": "./dist/gw3-sdk.js"
-      }
+      "node": "./dist/node/gw3-sdk.cjs",
+      "default": "./dist/node/gw3-sdk.cjs"
     }
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && yarn build:node",
+    "build:node": "rollup -c",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@types/crypto-js": "^4.1.1",
+    "@types/node": "^20.4.8",
     "rollup-plugin-auto-external": "^2.0.0",
+    "tslib": "^2.6.1",
     "type-fest": "^3.11.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "@rollup/plugin-typescript": "^11.1.2",
     "axios": "^1.4.0",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
